--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinic</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
 	<properties>
@@ -40,6 +40,6 @@
 	</build>
 	<scm>
 		<developerConnection>scm:git:https://github.com/rameezalam/sfg-pet-clinic.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>sfg-pet-clinic-0.0.2</tag>
   </scm>
 </project>
