--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -57,7 +57,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+        </dependency>
 
 
     </dependencies>
